Bug 318139 - displayed objects list is not refreshed after editing
Summary: displayed objects list is not refreshed after editing
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: ui (other bugs)
Version First Reported In: 2.0.6
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-10 15:12 UTC by Till Schäfer
Modified: 2014-06-17 15:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Till Schäfer 2013-04-10 15:12:48 UTC
when editing a curve the list under 
Edit Plot Item -> Contents -> Displayed objects 
is not refreshed after editing. This means an edited name is not actual in the list. Closing and reopening the dialog is a workaround. 

Reproducible: Always

Steps to Reproduce:
1. create a plot with a curve
2. press E to edit the plot
3. select the curve and press edit
4. change the name of the curve and press ok

Actual Results:  
the list displays the old name

Expected Results:  
the list displays the actual name
Comment 1 Netterfield 2014-06-17 15:10:25 UTC
Git commit 5c28591c7537538a4352c7d45b1d43ceea92b827 by Barth Netterfield.
Committed on 17/06/2014 at 15:09.
Pushed by netterfield into branch 'master'.

Update curve names in plot dialog when changed.

M  +3    -0    src/libkstapp/plotitemdialog.cpp
M  +1    -1    src/libkstapp/plotitemdialog.h

http://commits.kde.org/kst-plot/5c28591c7537538a4352c7d45b1d43ceea92b827