Update curve names in plot dialog when changed.

BUG: 318139